# authcord-python

./: README.md  pyproject.toml
authcord/: __init__.py  _http.py  client.py  exceptions.py  models.py  offline.py
examples/: basic_validation.py  offline_mode.py
